# server/Api/Services/ITransactionService.cs
@@ -9,6 +9,6 @@ public interface ITransactionService
     Task<List<TransactionDto>> GetTransactions(SieveModel sieveModel);
     Task<List<TransactionDto>> GetTransactionsByUserId(string userId, SieveModel sieveModel);
     Task<TransactionDto> CreateTransaction(string userId, CreateTransactionRequestDto dto);
-    Task<TransactionDto> ApproveTransaction(string userId, ApproveTransactionRequestDto dto);
-    Task<TransactionDto> DenyTransaction(string userId, ApproveTransactionRequestDto dto);
+    Task<TransactionDto> ApproveTransaction(string userId, string transactionId);
+    Task<TransactionDto> DenyTransaction(string userId, string transactionId);
 }
